@@ -165,6 +165,7 @@ auto_install-stamp:
 	install -m 0644 debian/additions/mysql_config_pic.1 $(TMP)/usr/share/man/man1
 	install -m 0644 debian/additions/mysql_embedded.1 $(TMP)/usr/share/man/man1
 	install -m 0644 debian/additions/debian_create_root_user.sql $(TMP)/usr/share/mysql/
+	install -m 0755 debian/additions/mysql-systemd-start $(TMP)/usr/share/mysql/
 	# install AppArmor profile
 	install -D -m 644 debian/apparmor-profile $(TMP)/etc/apparmor.d/usr.sbin.mysqld
 	chmod 0755 $(TMP)/usr/share/mysql-test/std_data/checkDBI_DBD-mysql.pl
@@ -214,10 +215,14 @@ override_dh_installlogrotate-arch:
 override_dh_installchangelogs:
 	dh_installchangelogs Docs/ChangeLog
 
+override_dh_systemd_enable:
+	dh_systemd_enable --name=mysql
+
 # Start mysql in runlevel 19 before 20 where apache, proftpd etc gets
 # started which might depend on a running database server.
 override_dh_installinit-arch:
 	dh_installinit --name=mysql -- defaults 19 21
+	dh_systemd_start --restart-after-upgrade
 
 override_dh_installcron-arch:
 	dh_installcron --name mysql-server
