@@ -6,6 +6,7 @@ mysql-5.6 (5.6.22-1~exp1) UNRELEASED; urgency=low
   [ Akhil Mohan ]
   * Provisioned dep8 test case upstream separated to run as non-root
   * Standards version moved up to 3.9.5 in d/control
+  * Added Systemd service profile and script
 
  -- Norvald H. Ryeng <norvald.ryeng@oracle.com>  Mon, 08 Dec 2014 14:00:11 +0100
 
